Fix calculations and fix the sorting algorithm of attacking army based on priority